public/css/style.css
body {
  font-family: 'Source Sans Pro', sans-serif;
  background: #EEE;
}

h1, h2, h3, h4, h5 {
  font-weight: 900;
}

img {
  max-width: 100%;
}

.Header {
  background: url('/img/background-small.jpg') no-repeat;
  background-size: cover;
  color: #FFF;
  height: 500px;
}

.Header-content {
  margin-top: 129px;
}

.Header .navbar-default .navbar-brand {
  color: #FFF;
  font-weight: bold;
}

.Header h1 {
  font-size: 60px;
}

.Header p {
  font-size: 20px;
  line-height: 40px;
}

.Header .navbar-default {
  background-color: transparent;
  border-color: transparent;
}

.Header .Course {
  margin: 0 20px;
}

.fancy-title, .fancy-subtitle {
  text-align: center;
  font-size: 25px;
  margin: 25px 0;
}

.fancy-subtitle {
  position: relative;
  margin: 25px 0 -25px;
}

.fancy-subtitle span {
  color: #03A9F4;
  text-transform: uppercase;
  font-weight: 900;
  font-size: 13px;
  position: relative;
}

.fancy-subtitle span:before, .fancy-subtitle span:after {
  content: "";
  position: absolute;
  border-top: 3px solid #d7d7c6;
  width: 100px;
  height: 3px;
  top: 50%;
}

.fancy-subtitle span:before {
  right: 100%;
  margin-right: 40px;
}

.fancy-subtitle span:after {
  left: 100%;
  margin-left: 40px;
}

.Email {
  background: url('/img/background2.jpg');
  background-size: cover;
  color: #FFF;
  height: 300px;
  margin-top: 100px;
}

.Email h2 {
  font-size: 40px;
}

.Playlist-Video:not(.active) {
  cursor: pointer;
}

.Playlist-Video:not(.active):hover {
  background: #EEE;
  color: #333;
}

.caption-subtitle {
  height: 30px;
}

#mc_embed_signup {
  margin-top: 50px;
}

#mce-EMAIL {
  height: 60px;
}

.mailchimp-button {
  width: 50px;
  float: left;
}

.mailchimp-input input[type="email"] {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.mailchimp-input {
  width: calc(100% - 50px);
  float: left;
}

.mailchimp-button input[type="submit"] {
  height: 60px;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.Footer-One {
}

.Footer-Two {
  background: #3C3E42;
  color: #FFF;
  margin-top: 50px;
  height: 75px;
  padding-top: 30px;
  text-align: center;
}

.Footer-Two h2 {
  display: none;
}

.Social {
  font-size: 30px;
}

.Social a {
  display: block;
  width: 45px;
  float: left;
  text-align: center;
  color: white;
  margin-right: 5px;
}

.Facebook {
  background: #2A378E;
}

.Twitter {
  background: #26A9E0;
}

.Youtube {
  background: #EB1A22;
}

@media (min-width: 900px) {
  .Header {
    background: url('/img/background.jpg') no-repeat;
    background-size: cover;
  }
}

